welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:7: error: not found: value i
		if(nums(i)!=value){
                        ^indexOfValue:10: error: not found: value i
			return i;
                               ^